syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./protos";

// The counter service definition.
service Counter {
  // Increment count by 1
  rpc IncrementCount (google.protobuf.Empty) returns (CounterReply);
  // Increment count through client stream of multiple counts
  rpc AccumulateCount (stream CounterRequest) returns (CounterReply);
  // Countdown with server stream
  rpc Countdown (google.protobuf.Empty) returns (stream CounterReply);

  rpc CountAndRespond (stream CounterRequest) returns (stream CounterReply);
}

// The request message containing the count to increment by
message CounterRequest {
  int32 count = 1;
}

// The response message containing the current count
message CounterReply {
  int32 count = 1;
}
